# assest_management_ai

./: .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_core_foundation.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: __init__.py  assets.py  catalog.py  dashboard.py  employees.py  health.py  organizations.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py
apps/api/app/models/: __init__.py  asset.py  attachment.py  audit.py  base.py  catalog.py  enums.py  identity.py  organization.py  procurement.py
apps/api/app/schemas/: asset.py  catalog.py  common.py  dashboard.py  employee.py  organization.py
apps/api/app/services/: dashboard.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx
apps/web/src/components/layout/: AppShell.tsx
apps/web/src/features/assets/: AssetsPage.tsx
apps/web/src/lib/: api.ts
apps/web/src/styles/: global.css
docs/: rebuild-roadmap.md  target-architecture.md
src/: App.jsx  index.css
src/components/: AssetDetail.jsx  AssetForm.jsx  DisposeModal.jsx  EmployeeForm.jsx  PurchaseForm.jsx  QRModal.jsx  ReturnForm.jsx  ServiceForm.jsx  TransferModal.jsx  UI.jsx  UpgradeForm.jsx
src/hooks/: useToast.js
src/pages/: Assets.jsx  ChainLog.jsx  Dashboard.jsx  Disposed.jsx  Employees.jsx  Settings.jsx
src/store/: useStore.js
src/utils/: excelIO.js  helpers.js  pdfGen.js
(+3 files in other folders)
