[project]
name = "assetflow-api"
version = "0.1.0"
description = "FastAPI backend for the AssetFlow rebuild"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
